CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)


add_subdirectory(MUSEteleTracker)
add_subdirectory(TrackingView)
add_subdirectory(scifi_beamprofile)
add_subdirectory(scifi_analysis)
add_subdirectory(lowlevel)
add_subdirectory(Trigger)
#add_subdirectory(tracker)
add_subdirectory(TOF)
add_subdirectory(GEMTOF)
add_subdirectory(GEM_STT)
add_subdirectory(hough)
add_subdirectory(Working_Histograms)
add_subdirectory(PID)
add_subdirectory(trb_tdc_debug)
add_subdirectory(SiPM_HV)
add_subdirectory(SlowCtrlDemo)
add_subdirectory(GEM_BH)
add_subdirectory(VertexRecon)
#add_subdirectory(SCLumi)
#add_subdirectory(TriggerBreakPoint)


#add_subdirectory(lumitrack)
#add_subdirectory(lumievent)
#add_subdirectory(lumires)
#add_subdirectory(lumikf)

#add_subdirectory(QuickTrack)

#add_subdirectory(LumiTrackOverview)

#add_subdirectory(WCanalysis)
#add_subdirectory(RateRunner)
#add_subdirectory(KalmanFilter)

#add_subdirectory(ToFanalysis)

#add_subdirectory(cosmics)

